src/test/deca/context/invalid/class31.deca
class A {
	
}
class int extends A{}

{

}